tests/valid-gd-scripts/funcs_and_calls.gd
extends Node

func foo():
	pass

func bar(a,b,c):
	pass

func exec():
	foo()
	bar(1,2,3)

func bat(x := 1):
	pass
