tests/invalid-gd-scripts/variadic_functions.gd
func foo(...args,a):
	pass
func bar(a,...args=[1,2,3]):
	pass
